# TweetSmash

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_PLAN.md  DESIGN.md  PYTHON_IMPLEMENTATION.md  README.md  docker-compose.yml  instructions.txt  pyproject.toml  requirements.txt  test_pipeline.py  test_system.py
.claude/: settings.local.json
docker/: Dockerfile.mcp
mcp-server/: server.py
mcp-server/agents/: __init__.py  base_agent.py  code_execution_agent.py  content_analysis_agent.py  content_synthesis_agent.py  github_discovery_agent.py  orchestrator.py
mcp-server/processors/: router.py
mcp-server/services/: tweetsmash_api.py
mcp-server/tools/: e2b.py  github.py  notion.py  tweetsmash.py  youtube.py
mcp-server/utils/: config.py  logger.py
n8n-workflows/: github-workflow.json  main-workflow.json
scripts/: install_tweetsmash_mcp.ps1  remove_tweetsmash_mcp.ps1
