[project]
name = "tweetsmash-automation"
version = "1.0.0"
description = "TweetSmash bookmark automation with MCP server and n8n integration"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["mcp_server"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"